--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
     "require": {
         "phpseclib/phpseclib": "~3.0"
-        
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
@@ -9,6 +8,11 @@
         "wp-coding-standards/wpcs": "^3.1",
         "woocommerce/woocommerce": "^5.9.1",
         "php": "^5.6 || ~7.0 || ~7.1 || ~7.2 || ~7.3 || ~7.4"
+    },
+    "autoload": {
+        "psr-4": {
+            "MMG\\CheckoutPayment\\": "includes/"
+        }
     },
     "config": {
         "allow-plugins": {
