--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "squizlabs/php_codesniffer": "^3.6",
         "wp-coding-standards/wpcs": "^3.1",
         "woocommerce/woocommerce": "^5.9.1",
-        "php": "^5.6 || ~7.0 || ~7.1 || ~7.2 || ~7.3 || ~7.4"
+        "php": "^5.6 || ~7.0 || ~7.1 || ~7.2 || ~7.3 || ~7.4",
+        "brain/monkey": "^2.6"
     },
     "autoload": {
         "psr-4": {
