--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     },
     "scripts": {
         "test": "phpunit",
-        "lint": "phpcs"
+        "lint": "phpcs",
+        "lint:fix": "phpcbf"
     }
 }
