--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,17 @@
     "require-dev": {
         "phpunit/phpunit": "^9.6",
         "squizlabs/php_codesniffer": "^3.6",
-        "wp-coding-standards/wpcs": "^3.1",
-        "woocommerce/woocommerce": "^5.9.1",
-        "php": "^5.6 || ~7.0 || ~7.1 || ~7.2 || ~7.3 || ~7.4"
+        "wp-coding-standards/wpcs": "^3.1"
     },
     "config": {
         "allow-plugins": {
             "composer/installers": true,
-            "automattic/jetpack-autoloader": true,
             "dealerdirect/phpcodesniffer-composer-installer": true
         }
+    },
+    "scripts": {
+        "test": "phpunit",
+        "lint": "phpcs",
+        "lint:fix": "phpcbf"
     }
 }
