--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,7 +51,7 @@ jobs:
       run: composer install --no-dev --optimize-autoloader
 
     - name: Zip project
-      run: zip -r mmg-checkout-payment.zip mmg-checkout-payment.php LICENSE.txt uninstall.php vendor/* README.txt js/* public/* admin/* includes/*
+      run: zip -r mmg-checkout-payment.zip mmg-checkout-payment.php LICENSE.txt uninstall.php vendor/* README.txt public/* admin/* includes/* composer.json composer.lock
 
     - name: Setup GitHub CLI
       uses: actions/setup-go@v4
