update devbox settings

--- a/devbox.d/nginx/nginx.conf
+++ b/devbox.d/nginx/nginx.conf
@@ -7,7 +7,7 @@ server {
          listen       8081;
          listen       [::]:8081;
          server_name  localhost;
-         root         devbox.d/web;
+         root         ../../../devbox.d/web;
 
          error_log error.log error;
          access_log access.log;
