--- a/devbox.d/php83/php-fpm.conf
+++ b/devbox.d/php83/php-fpm.conf
@@ -6,7 +6,7 @@ daemonize = yes
 [www]
 ; user = www-data
 ; group = www-data
-listen = 127.0.0.1:${PHPFPM_PORT}
+listen = 127.0.0.1:9000
 ; listen.owner = www-data
 ; listen.group = www-data
 pm = dynamic
