--- a/devbox.d/nginx/nginx.conf
+++ b/devbox.d/nginx/nginx.conf
@@ -7,7 +7,18 @@ server {
          listen       8081;
          listen       [::]:8081;
          server_name  localhost;
-         root         ../../../devbox.d/web;
+         root         devbox.d/wordpress;
+
+         location = /favicon.ico {
+            log_not_found off;
+            access_log off;
+        }
+
+        location = /robots.txt {
+            allow all;
+            log_not_found off;
+            access_log off;
+        }
 
          error_log error.log error;
          access_log access.log;
@@ -17,7 +28,7 @@ server {
          uwsgi_temp_path temp/uwsgi;
          scgi_temp_path temp/scgi;
 
-         index index.html;
+         index index.php;
          server_tokens off;
     }
 }
