--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,7 +51,7 @@ jobs:
         run: composer install --no-dev --optimize-autoloader
 
       - name: Zip project
-        run: zip -r mmg-checkout-payment.zip main.php LICENSE.txt uninstall.php vendor/* README.txt js/* assets/* includes/* plugin-updater/*
+        run: zip -r mmg-checkout-payment.zip main.php LICENSE.txt uninstall.php vendor/* README.txt js/* assets/* includes/*
 
       - name: Setup GitHub CLI
         uses: actions/setup-go@v4
