update release script

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,7 +51,10 @@ jobs:
         run: composer install --no-dev --optimize-autoloader
 
       - name: Zip project
-        run: zip -r mmg-checkout-payment.zip main.php LICENSE.txt uninstall.php vendor/* README.txt admin/* public/* includes/*
+        run: |
+          mkdir -p mmg-checkout-payment
+          cp -r main.php LICENSE.txt uninstall.php vendor/* README.txt includes/* admin/* public/*  mmg-checkout-payment/
+          zip -r mmg-checkout-payment.zip mmg-checkout-payment
 
       - name: Setup GitHub CLI
         uses: actions/setup-go@v4
